# homework_04_stack

./: CMakeLists.txt  README.md
examples/: empty.cpp  init.cpp  pop.cpp  push.cpp
include/: stack.hpp
sources/: main.cpp
tests/: empty_test.cpp  init_test.cpp  pop_test.cpp  push_test.cpp
